Setting for lint

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,14 @@ Issues = "https://github.com/akawashiro/straceprof/issues"
 
 [project.scripts]
 straceprof = "straceprof.cli:main"
+
+[tool.black]
+target-version = ['py310']
+
+[tool.isort]
+profile = "black"
+lines_after_imports = 2
+
+[tool.mypy]
+python_version = "3.10"
+mypy_path = ["src"]
