--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -13,10 +13,12 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
+      - name: Install pip
+        run: python -m pip install --upgrade pip
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install black isort mypy
+        run: pip install black isort mypy
+      - name: Install straceprof
+        run: pip install .
       - name: Check code formatting with black
         run: black .
       - name: Check code formatting with isort
