--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Install dependencies
         run: pip install black isort mypy
       - name: Install straceprof
-        run: pip install straceprof-python
+        run: pip install ./straceprof-python
       - name: Check code formatting with black
         run: black straceprof-python
       - name: Check code formatting with isort
