Introduce jest to run tests in ProcessUtils.test.ts.

--- a/.github/workflows/js-check.yaml
+++ b/.github/workflows/js-check.yaml
@@ -23,3 +23,7 @@ jobs:
       - name: Run checks
         working-directory: straceprof-js
         run: npm run check
+      
+      - name: Run tests
+        working-directory: straceprof-js
+        run: npm test
