Fix directories in CI

--- a/.github/workflows/deploy-js.yaml
+++ b/.github/workflows/deploy-js.yaml
@@ -24,19 +24,17 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: straceprof-js/package-lock.json
+          cache-dependency-path: package-lock.json
       - name: Install dependencies
-        working-directory: straceprof-js
         run: npm ci
       - name: Build
-        working-directory: straceprof-js
         run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'straceprof-js/dist'
+          path: 'dist'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
