--- a/.github/workflows/js-check.yaml
+++ b/.github/workflows/js-check.yaml
@@ -10,16 +10,16 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: straceprof-js/package-lock.json
+          cache-dependency-path: package-lock.json
       - name: Install dependencies
-        working-directory: straceprof-js
+        working-directory: .
         run: npm ci
       - name: Run checks
-        working-directory: straceprof-js
+        working-directory: .
         run: npm run check
       - name: Run tests
-        working-directory: straceprof-js
+        working-directory: .
         run: npm test
       - name: Build
-        working-directory: straceprof-js
+        working-directory: .
         run: npm run build
